updated the mongo documentdb and atlas intent

--- a/modules/mongo/documentdb/0.1/facets.yaml
+++ b/modules/mongo/documentdb/0.1/facets.yaml
@@ -4,6 +4,7 @@ version: '0.1'
 description: Adds mongo - documentdb flavor
 clouds:
 - aws
+- AWS
 spec:
   title: DocumentDB Configuration
   type: object
