--- a/modules/mongo/k8s/0.2/facets.yaml
+++ b/modules/mongo/k8s/0.2/facets.yaml
@@ -7,15 +7,6 @@ clouds:
   - kubernetes
   - azure
   - aws
-metadata:
-  title: Metadata of MongoDB
-  type: object
-  properties:
-    namespace:
-      type: string
-      title: Namespace
-      description: Namespace in which MongoDB should be deployed
-      default: default
 spec:
   title: K8s
   type: object
@@ -56,10 +47,6 @@ spec:
           description: Number of CPU cores required.
           minLength: 1
           pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
-          x-ui-compare:
-            field: spec.size.cpu_limit
-            comparator: "<="
-            x-ui-error-message: "CPU cannot be more than CPU limit"
           x-ui-placeholder: "e.g., '500m' or '1'"
           x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
         memory:
@@ -68,44 +55,8 @@ spec:
           description: Amount of memory required.
           minLength: 1
           pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
-          x-ui-compare:
-            field: spec.size.memory_limit
-            comparator: "<="
-            x-ui-error-message: "Memory cannot be more than memory limit"
           x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
           x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
-        cpu_limit:
-          type: string
-          title: CPU Limit
-          description: Set a maximum limit on CPU utilization.
-          minLength: 1
-          pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
-          x-ui-compare:
-            field: spec.size.cpu
-            comparator: ">="
-            x-ui-error-message: "CPU limit cannot be less than CPU"
-          x-ui-placeholder: "e.g., '500m' or '1'"
-          x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
-        memory_limit:
-          type: string
-          title: Memory Limit
-          description: Set a maximum limit on memory utilization.
-          minLength: 1
-          pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
-          x-ui-compare:
-            field: spec.size.memory
-            comparator: ">="
-            x-ui-error-message: "Memory limit cannot be less than memory"
-          x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
-          x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
-        volume:
-          type: string
-          title: Volume
-          description: The size of the volume.
-          minLength: 1
-          pattern: "^[0-9]+[G]i?$"
-          x-ui-placeholder: "e.g., '10Gi' or '50Gi'"
-          x-ui-error-message: "Volume must be specified in the correct format with integer only (e.g., '10Gi' or '50Gi')."
       required:
         - instance_count
         - cpu
@@ -114,10 +65,6 @@ spec:
     - size
     - authenticated
     - mongodb_version
-  x-ui-order:
-    - authenticated
-    - mongodb_version
-    - size
 sample:
   $schema: https://facets-cloud.github.io/facets-schemas/schemas/mongo/mongo.schema.json
   version: "0.2"
@@ -131,7 +78,4 @@ sample:
     size:
       cpu: "2"
       memory: "900Mi"
-      cpu_limit: "2"
-      memory_limit: "1Gi"
-      volume: "8Gi"
-      instance_count: 3
+      instance_count: 3s
