Added alias flavor to deployment to get forms for default

--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -1,6 +1,6 @@
 intent: service
 flavor: deployment
-alias-flavors: ["k8s"]
+alias-flavors: ["k8s", "default"]
 version: "0.1"
 description: Adds service module
 clouds:
