made changes for module 0.2

--- a/modules/aws_api_gateway/default/0.1/facets.yaml
+++ b/modules/aws_api_gateway/default/0.1/facets.yaml
@@ -1,6 +1,6 @@
 intent: aws_api_gateway
-flavor: default
-version: '0.1'
+flavor: default-test-0.2
+version: '0.2'
 description: Adds aws_api_gateway - default flavor
 clouds:
 - aws
@@ -13,25 +13,32 @@ spec:
       description: The protocol type for the API Gateway
       enum:
       - HTTP
-      - WEBSOCKET
       default: HTTP
     routes:
       type: object
       title: API Routes
       description: Define the routes for your API Gateway
-      x-ui-yaml-editor: true
       patternProperties:
-        ^(GET|POST|PUT|DELETE|PATCH|HEAD|OPTIONS)\\s+/.*:
+        ^[a-zA-Z0-9_-]+$:
           type: object
+          title: Route Configuration
           properties:
+            method:
+              type: string
+              title: HTTP Method
+              description: HTTP method for this route (e.g., GET, POST, PUT, DELETE,
+                etc.)
+              default: GET
+            path:
+              type: string
+              title: Route Path
+              description: URL path for this route (e.g., /, /users, /api/v1/data)
+              default: /
             integration_type:
               type: string
               title: Integration Type
-              description: Type of integration for this route
-              enum:
-              - HTTP_PROXY
-              - AWS_PROXY
-              - MOCK
+              description: Type of integration for this route (e.g., HTTP_PROXY, AWS_PROXY
+                etc.)
               default: HTTP_PROXY
             integration_uri:
               type: string
@@ -57,15 +64,14 @@ inputs:
 sample:
   $schema: https://facets-cloud.github.io/facets-schemas/schemas/aws_api_gateway/aws_api_gateway.schema.json
   kind: aws_api_gateway
-  flavor: default
+  flavor: default-test-0.2
   disabled: true
   metadata:
     description: some desc
-  version: '0.1'
+  version: '0.2'
   spec:
     protocol: HTTP
     routes:
-      GET /: {}
-iac:
-  validated_files:
-  - variables.tf
+      home_route:
+        method: GET
+        path: /
