--- a/modules/mysql/k8s/0.1/facets.yaml
+++ b/modules/mysql/k8s/0.1/facets.yaml
@@ -15,8 +15,6 @@ spec:
       type: string
       title: Postgres Version
       description: Specifies the Postgres version to use.
-      minLength: 1
-      x-ui-placeholder: "e.g., '13.3.0' or '15.3.0'"
       enum:
         - "9.6.9"
         - "10.9.0"
@@ -29,7 +27,6 @@ spec:
         - "16.0.0"
         - "16.4.0"
         - "17.0.0"
-      x-ui-error-message: "Please select a supported Postgres version."
     size:
       type: object
       title: Size
@@ -46,24 +43,16 @@ spec:
               description: Number of instances to create.
               minimum: 0
               maximum: 10
-              x-ui-placeholder: "e.g., 2"
-              x-ui-error-message: "Instance count must be between 1 and 10."
             cpu:
               type: string
               title: CPU
               description: Number of CPU cores required.
-              minLength: 1
               pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
-              x-ui-placeholder: "e.g., '500m' or '1'"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
             memory:
               type: string
               title: Memory
               description: Amount of memory required.
-              minLength: 1
               pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
-              x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
           required:
             - instance_count
             - cpu
@@ -77,18 +66,12 @@ spec:
               type: string
               title: CPU
               description: Number of CPU cores required.
-              minLength: 1
               pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
-              x-ui-placeholder: "e.g., '500m' or '1'"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
             memory:
               type: string
               title: Memory
               description: Amount of memory required.
-              minLength: 1
               pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
-              x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
           required:
             - cpu
             - memory
@@ -98,8 +81,7 @@ spec:
     - size
     - postgres_version
 sample:
-  $schema: >-
-    https://facets-cloud.github.io/facets-schemas/schemas/postgres/postgres.schema.json
+  $schema: "https://facets-cloud.github.io/facets-schemas/schemas/postgres/postgres.schema.json"
   flavor: k8s
   metadata: {}
   kind: postgres
