--- a/modules/aws_api_gateway/default/0.1/facets.yaml
+++ b/modules/aws_api_gateway/default/0.1/facets.yaml
@@ -11,8 +11,10 @@ spec:
       type: string
       title: Protocol Type
       description: The protocol type for the API Gateway
+      x-ui-typeable: true
       enum:
       - HTTP
+      - WebSocket
       default: HTTP
     routes:
       type: object
@@ -39,4 +41,10 @@ sample:
   spec:
     protocol: HTTP
     routes:
-      GET /: {}
+      GET /:
+        integration_type: <integration_type>
+        integration_uri: <uri>
+        integration_method: GET
+iac:
+  validated_files:
+  - variables.tf
