made the changes in facets.yaml

--- a/modules/aws_api_gateway/default/0.1/facets.yaml
+++ b/modules/aws_api_gateway/default/0.1/facets.yaml
@@ -14,7 +14,7 @@ spec:
       x-ui-typeable: true
       enum:
       - HTTP
-      - WebSocket
+      - WEBSOCKET
       default: HTTP
     routes:
       type: object
