added integrationtype on sample spec

--- a/modules/aws_api_gateway/default/0.1/facets.yaml
+++ b/modules/aws_api_gateway/default/0.1/facets.yaml
@@ -42,7 +42,7 @@ sample:
     protocol: HTTP
     routes:
       GET /:
-        integration_type: <integration_type>
+        integration_type: HTTP_PROXY
         integration_uri: <uri>
         integration_method: GET
 iac:
