Aws api gateway (module migration) (#381)
* added tf files

* changed variable.tf file

* changed spec on facets.yaml

* made changes for module 0.2

* reverted the changes in the yaml and local.tf

* reverted the changes and made the changes in facets.yaml

* made the changes in facets.yaml

* added integrationtype on sample spec

--- a/modules/aws_api_gateway/default/0.1/facets.yaml
+++ b/modules/aws_api_gateway/default/0.1/facets.yaml
@@ -4,8 +4,34 @@ version: '0.1'
 description: Adds aws_api_gateway - default flavor
 clouds:
 - aws
+spec:
+  type: object
+  properties:
+    protocol:
+      type: string
+      title: Protocol Type
+      description: The protocol type for the API Gateway
+      x-ui-typeable: true
+      enum:
+      - HTTP
+      - WEBSOCKET
+      default: HTTP
+    routes:
+      type: object
+      title: API Routes
+      description: Define the routes for your API Gateway
+      x-ui-yaml-editor: true
+  required:
+  - protocol
+  - routes
+inputs:
+  network_details:
+    optional: false
+    type: '@outputs/aws_vpc'
+    default:
+      resource_type: network
+      resource_name: default
 sample:
-  $schema: https://facets-cloud.github.io/facets-schemas/schemas/aws_api_gateway/aws_api_gateway.schema.json
   kind: aws_api_gateway
   flavor: default
   disabled: true
@@ -15,4 +41,10 @@ sample:
   spec:
     protocol: HTTP
     routes:
-      GET /: {}
+      GET /:
+        integration_type: HTTP_PROXY
+        integration_uri: <uri>
+        integration_method: GET
+iac:
+  validated_files:
+  - variables.tf
