--- a/modules/dynamodb/default/0.2/facets.yaml
+++ b/modules/dynamodb/default/0.2/facets.yaml
@@ -3,13 +3,14 @@ flavor: default
 version: '0.2'
 description: Adds dynamodb - default flavor
 clouds:
-- aws
+  - aws
+
 spec:
   type: object
-  title: AWS DynamoDB
+  title: AWS DynamoDB 
   description: Specification of the AWS DynamoDB table resource intent
   required:
-  - hash_key
+    - hash_key
   properties:
     hash_key:
       type: string
@@ -20,9 +21,8 @@ spec:
       type: object
       title: Table Attributes
       description: Define the attributes for the DynamoDB table
-      x-ui-typable: true
       patternProperties:
-        ^[a-zA-Z0-9_-]+$:
+        "^[a-zA-Z0-9_-]+$":
           type: object
           properties:
             name:
@@ -34,13 +34,14 @@ spec:
               title: Attribute Type
               description: The type of the attribute
               enum:
-              - S
-              - N
-              - B
+                - S  # String
+                - N  # Number
+                - B  # Binary
               default: S
           required:
-          - name
-          - type
+            - name
+            - type
+
 sample:
   kind: dynamodb
   flavor: default
